--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.6.2",
     "prettier": "3.0.0",
+    "sass": "^1.64.2",
     "ts-jest": "^29.1.1"
   }
 }
