--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.25",
+    "@types/redux-mock-store": "^1.0.3",
     "postcode-validator": "^3.8.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
     "react-hook-form": "^7.45.4",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
