--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux-mock-store": "^1.5.4",
+    "swiper": "8.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
