--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "serve": "serve -s build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "prettier": "prettier --write .",
     "lint": "eslint src",
     "prepare": "husky install",
@@ -83,6 +81,7 @@
     "jest-environment-jsdom": "^29.6.2",
     "prettier": "3.0.0",
     "sass": "^1.64.2",
+    "serve": "^14.2.1",
     "ts-jest": "^29.1.1"
   }
 }
