--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.debounce": "^4.0.8",
     "postcode-validator": "^3.8.14",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
