--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-CTP_PROJECT_KEY=ecommerce-app
-CTP_CLIENT_SECRET=PIh5ln89z2SFeJR1wSAMVnJ3jc9OOCir
-CTP_CLIENT_ID=nK6uRlvWHe5cKwrUjEIhsH5r
+
+CTP_PROJECT_KEY=ecommerce-shop
+CTP_CLIENT_SECRET=vKdaRHDryK1rrH1-fkbtOoLTcdFfw4u-
+CTP_CLIENT_ID="gE0dtkmvbmM2imJmZP5ZJt9q"
 CTP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
 CTP_API_URL=https://api.us-central1.gcp.commercetools.com
-CTP_SCOPES=view_categories:ecommerce-app manage_my_shopping_lists:ecommerce-app manage_payments:ecommerce-app manage_my_quote_requests:ecommerce-app manage_my_payments:ecommerce-app manage_my_quotes:ecommerce-app view_staged_quotes:ecommerce-app manage_my_orders:ecommerce-app view_published_products:ecommerce-app manage_my_profile:ecommerce-app manage_orders:ecommerce-app manage_my_business_units:ecommerce-app manage_customers:ecommerce-app view_products:ecommerce-app view_tax_categories:ecommerce-app view_cart_discounts:ecommerce-app view_project_settings:ecommerce-app view_shipping_methods:ecommerce-app create_anonymous_token:ecommerce-app view_shopping_lists:ecommerce-app view_messages:ecommerce-app
+CTP_SCOPES=manage_project:ecommerce-shop
